--- a/style.css
+++ b/style.css
@@ -5,6 +5,114 @@
 }
 
 html,body{
+
     overflow-x: hidden;
     scroll-behavior: smooth;
+}
+
+header{
+    height: 8vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: black;
+    color: white;
+}
+
+.logo{
+    display: flex;
+    align-items: center;
+    cursor: default;
+    font-weight: bold;
+    letter-spacing: 2px;
+    font-size: 1.7rem;
+
+    width: 20%;
+}
+
+.menu{
+    display: flex;
+    align-items: center;
+    width: 30%;
+    justify-content: space-around;
+}
+
+.option-menu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 10vw;
+    transition: all 0.5s ease-out;
+    cursor: pointer;
+}
+
+.option-menu a{
+    display: flex;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: white;
+    transition: all 0.4s ease-in;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+
+.option-menu a:hover{
+    background-color: white;
+    color: black;
+}
+
+.hamb-btn{
+    display: none;
+}
+
+
+@media only screen and (max-width:850px){
+
+    .hamb-btn{
+        display: block;
+        position: absolute;
+        right: 55px;
+        top: 25px;
+        width: 30px;
+    }
+
+    .logo{        
+        position: absolute;
+        left: 15px;
+        top: 15px;
+
+    }
+
+    header{
+        margin: 0px;
+        padding: 0px;
+    }
+
+
+    .menu{
+        position: absolute;
+        flex-direction: column;
+        justify-content: center;
+        width: 100vw;
+        height: 100vh;
+        background-color: black;
+        transition: all 0.5s ease;
+        margin-top: -900px;
+    }
+
+    .option-menu{
+        height: 10vh;
+        width: 50vw;
+    }
+
+    .mobile-menu{
+        margin-top: 900px;
+        border-bottom-right-radius: 5%;
+    }
 }
