--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header{
     font-size: 1.2rem;
     color: white;
     transition: all 0.4s ease-in;
-    height: 100%;
+    height: 8vh;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -71,6 +71,89 @@ header{
     display: none;
 }
 
+/* SLIDER */
+.slider-section{
+    max-width: 100%;
+    max-height: 92vh;
+    width: 100%;
+    height: auto;
+    position: relative;
+    overflow: hidden;
+    margin: auto;
+}
+/*
+.mislider{
+    display: none;
+    transition: 2s;
+    max-height: 100vh;
+}*/
+
+.mislider img{
+    width: 100%;
+    max-height: 100vh;
+    height: inherit;
+    object-fit: cover;
+    vertical-align: top;
+    transition: 2s;
+}
+
+.direcciones{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 40px;
+}
+
+.direcciones a{
+    color: aliceblue;
+    display: inline-block;
+    padding: 20PX;
+    text-decoration: none;
+}
+
+.direcciones a:hover{
+    background: rgba(255, 255, 255, .3);
+    transition: .5s;
+}
+
+.barras{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 25px;
+}
+
+.barra{
+    cursor: pointer;
+    height: 4px;
+    width: 50px;
+    margin: 0 5px;
+    background: #dcdde1;
+    display: inline-block;
+    margin-left: 3px;
+}
+
+.active{
+    background-color: #e74c3c;
+}
+
+
+.fade{
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+
+@keyframes fade {
+    from{opacity: .4;}
+    to{opacity: 1;}
+}
 
 @media only screen and (max-width:850px){
 
@@ -113,6 +196,6 @@ header{
 
     .mobile-menu{
         margin-top: 900px;
-        border-bottom-right-radius: 5%;
+        border-bottom-right-radius: 20%;
     }
 }
