fix espacios header 17/3/22

--- a/style.css
+++ b/style.css
@@ -34,14 +34,14 @@ header{
 .menu{
     display: flex;
     align-items: center;
-    width: 30%;
+    width: 50%;
     justify-content: space-around;
 }
 
 .option-menu{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     height: 100%;
     width: 10vw;
     transition: all 0.5s ease-out;
@@ -160,19 +160,20 @@ header{
     .hamb-btn{
         display: block;
         position: absolute;
-        right: 55px;
-        top: 25px;
-        width: 30px;
+        right: 5%;
+        top: 3%;
+        width: 40px;
     }
 
     .logo{        
         position: absolute;
         left: 15px;
-        top: 15px;
+        top: 3%;
 
     }
 
     header{
+        height: 11vh;
         margin: 0px;
         padding: 0px;
     }
