--- a/style.css
+++ b/style.css
@@ -149,10 +149,124 @@ header{
     animation-duration: 1.5s;
 }
 
+.menu-iconos{
+    background-color: rgb(255, 123, 0);
+    height: 35vh;
+}
+
+.seccion-imagenes{
+    background-color: rgb(98, 0, 255);
+    height: 65vh;
+}
+
+.servicios{
+    background-color: red;
+    height: 65vh;
+}
+
+.franja{
+
+    background-color: rgb(7, 116, 22);
+    height: 35vh;
+
+    
+}
+
+
+.contacto{
+    width: 100%;
+    height: 60vh;
+    color: whitesmoke;
+    background-color: #000002;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 0;
+}
+
+.contacto h1{
+    margin-top: 20px;
+    font-size: 4vmin;
+}
+
+.contacto form{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input::placeholder{
+    color: white;
+    font-family: 'raleway', 'sans-serif';
+}
+
+.text-inputs{
+    width: 60%;
+ display: flex;
+ align-items: center;
+ justify-content: space-evenly;
+ padding: 15px;
+ margin: 15px;
+}
+
+.text-inputs input{
+    padding: 10px;
+    border-radius: 8px;
+    width: 40%;
+    outline: none;
+    border: none;
+}
+
+.form textarea{
+    margin: 10px;
+    width: 60%;
+    font-size: 20px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+}
+
+.contacto input[type="submit"]{
+    margin: 10px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    width: 100px;
+}
 
 @keyframes fade {
     from{opacity: .4;}
     to{opacity: 1;}
+}
+
+.footer{
+    width: 100%;
+    height: 20vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color: #000005;
+    margin: 0;
+
+}
+
+.footer p{
+    color: whitesmoke;
+}
+
+.ctn{
+    padding: 8px 15px;
+    background: #ffffff;
+    border-radius: 30px;
+    color: rgb(5, 5, 5);
+    transition: all 0.5s ease;
+}
+
+.ctn:hover{
+    background-color: rgb(0, 0, 0);
+    color: #ffffff;
 }
 
 @media only screen and (max-width:850px){
@@ -198,5 +312,49 @@ header{
     .mobile-menu{
         margin-top: 900px;
         border-bottom-right-radius: 20%;
+    }
+
+    .contacto{
+        height: 45vh;
+        margin: 0;
+    }
+
+    .contacto h1{
+        font-size: 1.7rem;
+        margin-bottom: 0;
+    }
+
+    .text-inputs{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+
+
+    .text-inputs input{
+        margin: 7px;
+        width: 80%;
+        padding: 8px;
+    }
+
+    .footer{
+        margin: 0;
+        padding: 10px;
+        height: 10vh;
+    }
+    
+    .form textarea{
+        width: 80%;
+        font-size: 20px;
+        margin-bottom: 4px;
+        border-radius: 8px;
+    }
+
+    .contacto form{
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
